6 April 2009
+ Fixed bugs with popup menu.
+ Added "outdent" ability
+ Updated: img/icon_outdent.gif, 
  javascript/admin_link/default.php
  javascript/admin_link/menu.js

23 March 2009
+ Added option to have add links always on.
+ Updated: templates/admin/settings.tpl

Version 1.5.2
------------------------------------------------------------
28 January 2009
+ Added Verdon's edit full menu sitemap
+ Removed duplicate pin page link in miniadmin
+ Wrapped default menu template in box-content div per patch by Obones
+ Updated: templates/site_map.tpl, templates/menu_layout/basic/menu.tpl

20 January 2009
+ Local links created on key pages were not made current.

15 January 2009
+ Commented out pin page link in template
+ Updated: templates/menu_layout/horizontal/menu.tpl

Version 1.5.1
------------------------------------------------------------
2 December 2008
+ Fixed menu preventing unpinning.
+ Default is now false for menu expansion in admin mode.

Version 1.5.0
------------------------------------------------------------
14 November 2008
+ Added drag and drop sorting.

7 November 2008
+ Fixed menu delete script

4 November 2008
+ Increased link title length in database.

7 October 2008
+ Moved scripts into separate file.

2 October 2008
+ RFE #2060159: Pin page link appears in miniadmin if admin mode is
  set to appear there.
+ Fixed bug #2079194. Deleting menu now removes links as well. Thanks
  Tommy.
+ Added option to expand menus when admin mode is enabled
+ Reworded menu admin link.
+ Updated: templates/admin/settings.tpl, conf/config.php

26 September 2008
+ Added more ajax controls (add and delete) to the admin menu.
+ Updated: javascript/admin_link/

10 Sept 2008
+ getTitle returns link without decoding it. needed to prevent
  breakage with quotation marks.

8 September 2008
+ Fixed bug introduced with ajax deletion

13 August 2008
+ Increased some popup window sizes
+ Move link changed into Ajax call
+ Updated: javascript/move_link/
templates/style.css